# eB

./: CLAUDE.md  README.md  integration_test.py  requirements.txt  test_drag_drop.html  test_upload.py
admin/: CLAUDE.md  package-lock.json  package.json
admin/app/: page.tsx
admin/app/dashboard/: layout.tsx  page.tsx
admin/app/dashboard/booking/: booking-card.tsx  booking-form-modal.tsx  booking-table.tsx  droppable-column.tsx  page.tsx
admin/app/dashboard/booking/type/: booking-status.ts
admin/app/dashboard/knowledge/: page.tsx
admin/app/dashboard/settings/: page.tsx
admin/app/login/: page.tsx
admin/components/ui/: datepicker.tsx  pagination.tsx
chatbot/: CLAUDE.md  README.md  create_test_appointments.py  frontend.html  init_data.py  nail_salon.db  package.json  pyproject.toml  readme.md  run.py  test_chatbot.py
chatbot/app/: main.py
chatbot/app/agent/: graph.py  tools.py
chatbot/app/api/: admin.py  chat.py  knowledge.py
chatbot/app/database/: config.py
chatbot/app/models/: models.py
chatbot/app/schemas/: schemas.py
chatbot/app/services/: crud.py  document_processor.py
chatbot/app/templates/: chat.html
chatbot/uploads/documents/: 9b11de65-6e9a-47d0-9434-1761ba7c5cf6_Mau-hop-dong-o-nho_0705084530.docx
