[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.21",
    "langgraph>=0.4.8",
    "pydantic[email]>=2.11.5",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
    "aiofiles>=24.0.0",
    "python-multipart>=0.0.7",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "sqlalchemy>=2.0.0",
]
